--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "dotenv": "^16.4.5",
+    "embla-carousel-react": "^8.3.1",
     "file-saver": "^2.0.5",
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^6.0.1",
